--- a/KnowledgeProjet3/knowledge/templates/knowledge/category.html
+++ b/KnowledgeProjet3/knowledge/templates/knowledge/category.html
@@ -1,36 +1,36 @@
-<!-- Mise en place du titre en couleur -->
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+{% extends "base.html" %}
+
+{% block title %}Categorie{% endblock %}
+
+{% block content %}
 
 <!-- Mise en place de la liste des catégories -->
-<div class="bienvenue-text-center">
-    <h3>Voici les catégories</h3>
+<div>
+    <h3 class="texte-categorie">Browse All Categories</h3>
     <div class="category-container">
         {% for category in categories %}
-                <a href="{% url 'child_category' category.id %}">
-                    <button type="button" class="btn-category">
-                        <h3>{{ category.titre }}</h3>
-                        <p>{{ category.description }}</p>
-                    </button>
+                <a href="{% url 'child_category' category.id %}" class="category-card">
+                    <div class="moncercle"></div>
+                    <div class="category-info">
+                        <div class="text-content">
+                            <div class="placement-carre">
+                                <button class="titre-carre">
+                                    <p class="titre">{{ category.titre }}</p>
+                                </button>
+                            </div>
+                            <div class="description-category">{{ category.description }}</div>
+                        </div>
+                    </div>
                 </a>
-                    {% if category.articles.all %}
-                        <ul>
-                            {% for article in category.articles.all %}
-                                <li>
-                                    <a href="{% url 'article' article.id %}">
-                                        <h4>{{ article.titre }}</h4>
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
-
         {% endfor %}
     </div>
 </div>
 
+
+
 <!-- Bouton pour accéder à la page d'accueil -->
-<div class="cadre-lien-retour">
+<!--<div class="cadre-lien-retour">
     <p><u>Si vous souhaitez accéder à la page d'accueil:</u></p>
     <a href="{% url 'accueil' %}"><button class="btn btn-primary-accueil">Retour à la page d'accueil</button></a>
-</div>
+</div>-->
+{% endblock %}
