--- a/KnowledgeProjet3/knowledge/templates/knowledge/index.html
+++ b/KnowledgeProjet3/knowledge/templates/knowledge/index.html
@@ -1,6 +1,8 @@
-<!--Mise en place du titre en couleur-->
-{% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+{% extends "base.html" %}
+
+{% block title %}Accueil{% endblock %}
+
+{% block content %}
 
 <!--Mise en place du titre "Bonjour et bienvenue sur le projet VM !"-->
     <div class="bienvenue-text-center">
@@ -8,13 +10,15 @@
     </div>   
 
 <!--Bouton pour accéder à la page des catégories-->
-<div class="cadre-lien-retour">
-    <p><u>Si vous souhaitez accéder à la page des catégories</u></p>
-    <a href="{% url 'category' %}"><button class="btn btn-primary-categorie">Page des catégories</button></a>
-</div>
+    <div class="cadre-lien-retour">
+        <p><u>Si vous souhaitez accéder à la page des catégories</u></p>
+        <a href="{% url 'category' %}"><button class="btn btn-primary-categorie">Page des catégories</button></a>
+    </div>
 
 <!--Bouton pour accéder à la page de monitoring-->
-<div class="cadre-lien-retour">
-    <p><u>Si vous souhaitez accéder à la page de monitoring</u></p>
-    <a href="{% url 'monitoring' %}"><button class="btn btn-primary-monitoring">Page de monitoring</button></a>
-</div>
+    <div class="cadre-lien-retour">
+        <p><u>Si vous souhaitez accéder à la page de monitoring</u></p>
+        <a href="{% url 'monitoring' %}"><button class="btn btn-primary-monitoring">Page de monitoring</button></a>
+    </div>
+
+{% endblock %}
