--- a/KnowledgeProjet3/knowledge/templates/knowledge/monitoring.html
+++ b/KnowledgeProjet3/knowledge/templates/knowledge/monitoring.html
@@ -1,6 +1,8 @@
-<!--Mise en place du titre en couleur-->
-{% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+{% extends "base.html" %}
+
+{% block title %}Monitoring{% endblock %}
+
+{% block content %}
 
 <!--Mise en place du titre "Bonjour et bienvenue sur le projet Catégorie !"-->
     <div class="bienvenue-text-center">
@@ -8,22 +10,24 @@
     </div>
 
 <!--Permet de passer une ligne-->
-<br>
+    <br>
 
 <!--Bouton pour accéder à la page d'accueil-->
-<div class="cadre-lien-retour">
-    <p><u>Si vous souhaitez accéder à la page d'accueil:</u></p>
-    <a href="{% url 'accueil' %}"><button class="btn btn-primary-accueil">Retour à la page d'accueil</button></a>
-</div>
+    <div class="cadre-lien-retour">
+        <p><u>Si vous souhaitez accéder à la page d'accueil:</u></p>
+        <a href="{% url 'accueil' %}"><button class="btn btn-primary-accueil">Retour à la page d'accueil</button></a>
+    </div>
 
 <!-- Bouton pour accéder à la page de création des catégories -->
-<div class="cadre-lien-retour">
-    <p><u>Si vous souhaitez créer une catégorie:</u></p>
-    <a href="{% url 'create_category' %}"><button class="btn btn-primary-creation categorie">Créer une catégorie</button></a>
-</div>
+    <div class="cadre-lien-retour">
+        <p><u>Si vous souhaitez créer une catégorie:</u></p>
+        <a href="{% url 'create_category' %}"><button class="btn btn-primary-creation categorie">Créer une catégorie</button></a>
+    </div>
 
 <!-- Bouton pour accéder à la page de création des articles -->
-<div class="cadre-lien-retour">
-    <p><u>Si vous souhaitez créer un article:</u></p>
-    <a href="{% url 'create_article' category_id=1 %}"><button class="btn btn-primary-creation categorie">Créer un nouvel article</button></a>
-</div>
+    <div class="cadre-lien-retour">
+        <p><u>Si vous souhaitez créer un article:</u></p>
+        <a href="{% url 'create_article' category_id=1 %}"><button class="btn btn-primary-creation categorie">Créer un nouvel article</button></a>
+    </div>
+    
+{% endblock %}
